high contrast fix

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -76,6 +76,10 @@
         color: @selected !important;
     }
 
+    .menubar .editor-menuitem {
+        border: none !important;
+    }
+
     .menubar .accessibleMenu > .item:focus,
     .menubar .editor-menuitem > .item:focus:not(.active) {
         i, span {
